# dataflow-ext

./: Dockerfile  README.md  docker-compose.yml  memo  pyproject.toml
src/dataflow_ext/: __init__.py  main.py  pub_sub.py
